gst/vaapi/gstvaapivideomemory.h
@@ -51,15 +51,18 @@ typedef struct _GstVaapiVideoAllocatorClass     GstVaapiVideoAllocatorClass;
 /**
  * GstVaapiVideoMemoryMapType:
  * @GST_VAAPI_VIDEO_MEMORY_MAP_TYPE_SURFACE: map with gst_buffer_map()
- *   as a whole and return a #GstVaapiSurfaceProxy
+ *   and flags = 0x00 to return a #GstVaapiSurfaceProxy
  * @GST_VAAPI_VIDEO_MEMORY_MAP_TYPE_PLANAR: map individual plane with
  *   gst_video_frame_map()
+ * @GST_VAAPI_VIDEO_MEMORY_MAP_TYPE_LINEAR: map with gst_buffer_map()
+ *   and flags = GST_MAP_READ to return the raw pixels of the whole image
  *
  * The set of all #GstVaapiVideoMemory map types.
  */
 typedef enum {
     GST_VAAPI_VIDEO_MEMORY_MAP_TYPE_SURFACE = 1,
-    GST_VAAPI_VIDEO_MEMORY_MAP_TYPE_PLANAR
+    GST_VAAPI_VIDEO_MEMORY_MAP_TYPE_PLANAR,
+    GST_VAAPI_VIDEO_MEMORY_MAP_TYPE_LINEAR
 } GstVaapiVideoMemoryMapType;
 
 /**
